deployment/staging/workloads/ingresses/backend-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  tls:
    - secretName: "api.liars-dice.staging.kryha.dev"
      hosts:
        - "api.liars-dice.staging.kryha.dev"
  rules:
    - host: "api.liars-dice.staging.kryha.dev"
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: api
