deployment/staging/workloads/ingresses/backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/stream-snippet: |
    #   server {
    #     listen 8000;
    #     proxy_pass 127.0.0.1:80;
    #   }
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   set $cors "true";
    #   if ($request_method = 'OPTIONS') {
    #     set $cors "${cors}options";
    #   }

    #   if ($cors = "true") {
    #     add_header 'Access-Control-Allow-Origin' "$http_origin" always;
    #     add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, PATCH, OPTIONS' always;
    #     add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
    #     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
    #   }

    #   if ($cors = "trueoptions") {
    #     add_header 'Access-Control-Allow-Origin' "$http_origin";
    #     add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, PATCH, OPTIONS';
    #     add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
    #     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
    #     add_header 'Access-Control-Max-Age' 1728000;
    #     add_header 'Content-Type' 'text/plain charset=UTF-8';
    #     add_header 'Content-Length' 0;
    #     return 204;
    #   }
spec:
  tls:
    # - secretName: "backend.liars-dice.staging.kryha.dev"
    #   hosts:
    #     - "backend.liars-dice.staging.kryha.dev"
    - secretName: "api.liars-dice.staging.kryha.dev"
      hosts:
        - "api.liars-dice.staging.kryha.dev"
  rules:
    # - host: "backend.liars-dice.staging.kryha.dev"
    #   http:
    #     paths:
    #       - path: "/(.*)"
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: backend
    #             port:
    #               name: dashboard
    - host: "api.liars-dice.staging.kryha.dev"
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: api
